CSharpCodeParser-Antlr3.5/CSharpCodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 CSharpCode.g 2013-06-30 23:01:31

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;

namespace  Gplusnasite.CSharpParser 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
[System.CLSCompliant(false)]
public partial class CSharpCodeParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DEFAULT_VALUE", "ESC_SEQ", "HEX_DIGIT", "NAME", "SPACE", "STRING", "UNICODE_ESC", "'('", "')'", "','", "'.'", "':'", "';'", "'='", "'class'", "'private'", "'protected'", "'public'", "'using'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int COMMENT=4;
	public const int DEFAULT_VALUE=5;
	public const int ESC_SEQ=6;
	public const int HEX_DIGIT=7;
	public const int NAME=8;
	public const int SPACE=9;
	public const int STRING=10;
	public const int UNICODE_ESC=11;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public CSharpCodeParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CSharpCodeParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return CSharpCodeParser.tokenNames; } }
	public override string GrammarFileName { get { return "CSharpCode.g"; } }


	    public AccessType Accessor = AccessType.Private;


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_using_namespace() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_using_namespace() {}
	// $ANTLR start "using_namespace"
	// CSharpCode.g:53:1: fragment using_namespace returns [string result] : NAME ;
	[GrammarRule("using_namespace")]
	private string using_namespace()
	{
		EnterRule_using_namespace();
		EnterRule("using_namespace", 1);
		TraceIn("using_namespace", 1);
	    string result = default(string);


	    IToken NAME1 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "using_namespace");
		DebugLocation(53, 0);
		try
		{
			// CSharpCode.g:54:3: ( NAME )
			DebugEnterAlt(1);
			// CSharpCode.g:54:3: NAME
			{
			DebugLocation(54, 3);
			NAME1=(IToken)Match(input,NAME,Follow._NAME_in_using_namespace352); 
			DebugLocation(55, 1);

			    result = (NAME1!=null?NAME1.Text:default(string));


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("using_namespace", 1);
			LeaveRule("using_namespace", 1);
			LeaveRule_using_namespace();
	    }
	 	DebugLocation(58, 0);
		} finally { DebugExitRule(GrammarFileName, "using_namespace"); }
		return result;

	}
	// $ANTLR end "using_namespace"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_using_namespaces() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_using_namespaces() {}
	// $ANTLR start "using_namespaces"
	// CSharpCode.g:60:1: using_namespaces returns [Namespaces result] : ( 'using' SPACE (namespace1= using_namespace ) ( '.' (namespace2= using_namespace ) )* ';' ) ;
	[GrammarRule("using_namespaces")]
	private Namespaces using_namespaces()
	{
		EnterRule_using_namespaces();
		EnterRule("using_namespaces", 2);
		TraceIn("using_namespaces", 2);
	    Namespaces result = default(Namespaces);


	    string namespace1 = default(string);
	    string namespace2 = default(string);


	            result = new Namespaces();
	        
		try { DebugEnterRule(GrammarFileName, "using_namespaces");
		DebugLocation(60, 0);
		try
		{
			// CSharpCode.g:65:5: ( ( 'using' SPACE (namespace1= using_namespace ) ( '.' (namespace2= using_namespace ) )* ';' ) )
			DebugEnterAlt(1);
			// CSharpCode.g:65:7: ( 'using' SPACE (namespace1= using_namespace ) ( '.' (namespace2= using_namespace ) )* ';' )
			{
			DebugLocation(65, 7);
			// CSharpCode.g:65:7: ( 'using' SPACE (namespace1= using_namespace ) ( '.' (namespace2= using_namespace ) )* ';' )
			DebugEnterAlt(1);
			// CSharpCode.g:65:8: 'using' SPACE (namespace1= using_namespace ) ( '.' (namespace2= using_namespace ) )* ';'
			{
			DebugLocation(65, 8);
			Match(input,23,Follow._23_in_using_namespaces385); 
			DebugLocation(65, 16);
			Match(input,SPACE,Follow._SPACE_in_using_namespaces387); 
			DebugLocation(65, 22);
			// CSharpCode.g:65:22: (namespace1= using_namespace )
			DebugEnterAlt(1);
			// CSharpCode.g:65:23: namespace1= using_namespace
			{
			DebugLocation(65, 34);
			PushFollow(Follow._using_namespace_in_using_namespaces394);
			namespace1=using_namespace();
			PopFollow();


			}

			DebugLocation(66, 5);

			        result.Names.Add(namespace1);
			        result.FullName += namespace1;
			    
			DebugLocation(70, 5);
			// CSharpCode.g:70:5: ( '.' (namespace2= using_namespace ) )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_1 = input.LA(1);

				if ((LA1_1==15))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// CSharpCode.g:70:6: '.' (namespace2= using_namespace )
					{
					DebugLocation(70, 6);
					Match(input,15,Follow._15_in_using_namespaces408); 
					DebugLocation(70, 10);
					// CSharpCode.g:70:10: (namespace2= using_namespace )
					DebugEnterAlt(1);
					// CSharpCode.g:70:11: namespace2= using_namespace
					{
					DebugLocation(70, 22);
					PushFollow(Follow._using_namespace_in_using_namespaces415);
					namespace2=using_namespace();
					PopFollow();


					}

					DebugLocation(71, 5);

					        result.Names.Add(namespace2);
					        result.FullName += ("." + namespace2);
					    

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(75, 8);
			Match(input,17,Follow._17_in_using_namespaces431); 

			}


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("using_namespaces", 2);
			LeaveRule("using_namespaces", 2);
			LeaveRule_using_namespaces();
	    }
	 	DebugLocation(76, 0);
		} finally { DebugExitRule(GrammarFileName, "using_namespaces"); }
		return result;

	}
	// $ANTLR end "using_namespaces"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_access_type() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_access_type() {}
	// $ANTLR start "access_type"
	// CSharpCode.g:78:1: access_type returns [AccessType result] : ( ( 'public' ':' ) | ( 'protected' ':' ) | ( 'private' ':' ) );
	[GrammarRule("access_type")]
	private AccessType access_type()
	{
		EnterRule_access_type();
		EnterRule("access_type", 3);
		TraceIn("access_type", 3);
	    AccessType result = default(AccessType);


		try { DebugEnterRule(GrammarFileName, "access_type");
		DebugLocation(78, 4);
		try
		{
			// CSharpCode.g:79:5: ( ( 'public' ':' ) | ( 'protected' ':' ) | ( 'private' ':' ) )
			int alt2=3;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			switch (input.LA(1))
			{
			case 22:
				{
				alt2 = 1;
				}
				break;
			case 21:
				{
				alt2 = 2;
				}
				break;
			case 20:
				{
				alt2 = 3;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// CSharpCode.g:80:5: ( 'public' ':' )
				{
				DebugLocation(80, 5);
				// CSharpCode.g:80:5: ( 'public' ':' )
				DebugEnterAlt(1);
				// CSharpCode.g:80:6: 'public' ':'
				{
				DebugLocation(80, 6);
				Match(input,22,Follow._22_in_access_type454); 
				DebugLocation(80, 15);
				Match(input,16,Follow._16_in_access_type456); 

				}

				DebugLocation(81, 5);

				        Accessor = AccessType.Public;
				        result = AccessType.Public;
				    

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// CSharpCode.g:85:6: ( 'protected' ':' )
				{
				DebugLocation(85, 6);
				// CSharpCode.g:85:6: ( 'protected' ':' )
				DebugEnterAlt(1);
				// CSharpCode.g:85:7: 'protected' ':'
				{
				DebugLocation(85, 7);
				Match(input,21,Follow._21_in_access_type471); 
				DebugLocation(85, 19);
				Match(input,16,Follow._16_in_access_type473); 

				}

				DebugLocation(86, 5);

				        Accessor = AccessType.Protected;
				        result = AccessType.Protected;
				    

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// CSharpCode.g:90:6: ( 'private' ':' )
				{
				DebugLocation(90, 6);
				// CSharpCode.g:90:6: ( 'private' ':' )
				DebugEnterAlt(1);
				// CSharpCode.g:90:7: 'private' ':'
				{
				DebugLocation(90, 7);
				Match(input,20,Follow._20_in_access_type488); 
				DebugLocation(90, 17);
				Match(input,16,Follow._16_in_access_type490); 

				}

				DebugLocation(91, 5);

				        Accessor = AccessType.Private;
				        result = AccessType.Private;
				    

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("access_type", 3);
			LeaveRule("access_type", 3);
			LeaveRule_access_type();
	    }
	 	DebugLocation(95, 4);
		} finally { DebugExitRule(GrammarFileName, "access_type"); }
		return result;

	}
	// $ANTLR end "access_type"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_variable_value() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_variable_value() {}
	// $ANTLR start "variable_value"
	// CSharpCode.g:102:1: variable_value : '=' ( (~ ( ';' ) )+ ) ';' ;
	[GrammarRule("variable_value")]
	private void variable_value()
	{
		EnterRule_variable_value();
		EnterRule("variable_value", 4);
		TraceIn("variable_value", 4);
		try { DebugEnterRule(GrammarFileName, "variable_value");
		DebugLocation(102, 4);
		try
		{
			// CSharpCode.g:103:5: ( '=' ( (~ ( ';' ) )+ ) ';' )
			DebugEnterAlt(1);
			// CSharpCode.g:103:6: '=' ( (~ ( ';' ) )+ ) ';'
			{
			DebugLocation(103, 6);
			Match(input,18,Follow._18_in_variable_value567); 
			DebugLocation(103, 10);
			// CSharpCode.g:103:10: ( (~ ( ';' ) )+ )
			DebugEnterAlt(1);
			// CSharpCode.g:103:11: (~ ( ';' ) )+
			{
			DebugLocation(103, 11);
			// CSharpCode.g:103:11: (~ ( ';' ) )+
			int cnt3=0;
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_1 = input.LA(1);

				if (((LA3_1>=COMMENT && LA3_1<=16)||(LA3_1>=18 && LA3_1<=25)))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// CSharpCode.g:
					{
					DebugLocation(103, 11);
					if ((input.LA(1)>=COMMENT && input.LA(1)<=16)||(input.LA(1)>=18 && input.LA(1)<=25))
					{
						input.Consume();
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}


					}
					break;

				default:
					if (cnt3 >= 1)
						goto loop3;

					EarlyExitException eee3 = new EarlyExitException( 3, input );
					DebugRecognitionException(eee3);
					throw eee3;
				}
				cnt3++;
			}
			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			DebugLocation(103, 20);
			Match(input,17,Follow._17_in_variable_value577); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("variable_value", 4);
			LeaveRule("variable_value", 4);
			LeaveRule_variable_value();
	    }
	 	DebugLocation(104, 4);
		} finally { DebugExitRule(GrammarFileName, "variable_value"); }
		return;

	}
	// $ANTLR end "variable_value"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_variable() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_variable() {}
	// $ANTLR start "variable"
	// CSharpCode.g:106:1: variable returns [Variable result] : ( ( access_type )? (type= NAME ) SPACE (name= NAME ) ';' ) ;
	[GrammarRule("variable")]
	private Variable variable()
	{
		EnterRule_variable();
		EnterRule("variable", 5);
		TraceIn("variable", 5);
	    Variable result = default(Variable);


	    IToken type = default(IToken);
	    IToken name = default(IToken);


	            result = new Variable();
	        
		try { DebugEnterRule(GrammarFileName, "variable");
		DebugLocation(106, 4);
		try
		{
			// CSharpCode.g:111:5: ( ( ( access_type )? (type= NAME ) SPACE (name= NAME ) ';' ) )
			DebugEnterAlt(1);
			// CSharpCode.g:111:6: ( ( access_type )? (type= NAME ) SPACE (name= NAME ) ';' )
			{
			DebugLocation(111, 6);
			// CSharpCode.g:111:6: ( ( access_type )? (type= NAME ) SPACE (name= NAME ) ';' )
			DebugEnterAlt(1);
			// CSharpCode.g:111:7: ( access_type )? (type= NAME ) SPACE (name= NAME ) ';'
			{
			DebugLocation(111, 7);
			// CSharpCode.g:111:7: ( access_type )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_1 = input.LA(1);

			if (((LA4_1>=20 && LA4_1<=22)))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// CSharpCode.g:111:7: access_type
				{
				DebugLocation(111, 7);
				PushFollow(Follow._access_type_in_variable619);
				access_type();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(111, 20);
			// CSharpCode.g:111:20: (type= NAME )
			DebugEnterAlt(1);
			// CSharpCode.g:111:21: type= NAME
			{
			DebugLocation(111, 26);
			type=(IToken)Match(input,NAME,Follow._NAME_in_variable627); 

			}

			DebugLocation(111, 34);
			Match(input,SPACE,Follow._SPACE_in_variable630); 
			DebugLocation(111, 40);
			// CSharpCode.g:111:40: (name= NAME )
			DebugEnterAlt(1);
			// CSharpCode.g:111:41: name= NAME
			{
			DebugLocation(111, 46);
			name=(IToken)Match(input,NAME,Follow._NAME_in_variable637); 

			}

			DebugLocation(111, 54);
			Match(input,17,Follow._17_in_variable640); 

			}

			DebugLocation(112, 5);

			    	result.Accessor = Accessor;
			    	result.Type = (type!=null?type.Text:default(string));
			    	result.Name = (name!=null?name.Text:default(string));
			    

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("variable", 5);
			LeaveRule("variable", 5);
			LeaveRule_variable();
	    }
	 	DebugLocation(117, 4);
		} finally { DebugExitRule(GrammarFileName, "variable"); }
		return result;

	}
	// $ANTLR end "variable"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_parameter() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_parameter() {}
	// $ANTLR start "parameter"
	// CSharpCode.g:119:1: parameter returns [Variable result] : (type= NAME ) SPACE (name= NAME ) ;
	[GrammarRule("parameter")]
	private Variable parameter()
	{
		EnterRule_parameter();
		EnterRule("parameter", 6);
		TraceIn("parameter", 6);
	    Variable result = default(Variable);


	    IToken type = default(IToken);
	    IToken name = default(IToken);


	            result = new Variable();
	        
		try { DebugEnterRule(GrammarFileName, "parameter");
		DebugLocation(119, 4);
		try
		{
			// CSharpCode.g:124:5: ( (type= NAME ) SPACE (name= NAME ) )
			DebugEnterAlt(1);
			// CSharpCode.g:124:6: (type= NAME ) SPACE (name= NAME )
			{
			DebugLocation(124, 6);
			// CSharpCode.g:124:6: (type= NAME )
			DebugEnterAlt(1);
			// CSharpCode.g:124:7: type= NAME
			{
			DebugLocation(124, 12);
			type=(IToken)Match(input,NAME,Follow._NAME_in_parameter689); 

			}

			DebugLocation(124, 20);
			Match(input,SPACE,Follow._SPACE_in_parameter692); 
			DebugLocation(124, 26);
			// CSharpCode.g:124:26: (name= NAME )
			DebugEnterAlt(1);
			// CSharpCode.g:124:27: name= NAME
			{
			DebugLocation(124, 32);
			name=(IToken)Match(input,NAME,Follow._NAME_in_parameter699); 

			}

			DebugLocation(125, 5);

			    	result.Accessor = AccessType.None;
			    	result.Type = (type!=null?type.Text:default(string));
			    	result.Name = (name!=null?name.Text:default(string));
			    

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("parameter", 6);
			LeaveRule("parameter", 6);
			LeaveRule_parameter();
	    }
	 	DebugLocation(130, 4);
		} finally { DebugExitRule(GrammarFileName, "parameter"); }
		return result;

	}
	// $ANTLR end "parameter"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_parameters() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_parameters() {}
	// $ANTLR start "parameters"
	// CSharpCode.g:132:1: parameters returns [List<Variable> result] : ( (parameter1= parameter ) ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )* )? ;
	[GrammarRule("parameters")]
	private List<Variable> parameters()
	{
		EnterRule_parameters();
		EnterRule("parameters", 7);
		TraceIn("parameters", 7);
	    List<Variable> result = default(List<Variable>);


	    Variable parameter1 = default(Variable);
	    Variable parameter2 = default(Variable);


	            result = new List<Variable>();
	        
		try { DebugEnterRule(GrammarFileName, "parameters");
		DebugLocation(132, 4);
		try
		{
			// CSharpCode.g:137:5: ( ( (parameter1= parameter ) ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )* )? )
			DebugEnterAlt(1);
			// CSharpCode.g:137:6: ( (parameter1= parameter ) ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )* )?
			{
			DebugLocation(137, 6);
			// CSharpCode.g:137:6: ( (parameter1= parameter ) ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )* )?
			int alt8=2;
			try { DebugEnterSubRule(8);
			try { DebugEnterDecision(8, decisionCanBacktrack[8]);
			int LA8_1 = input.LA(1);

			if ((LA8_1==NAME))
			{
				alt8 = 1;
			}
			} finally { DebugExitDecision(8); }
			switch (alt8)
			{
			case 1:
				DebugEnterAlt(1);
				// CSharpCode.g:137:7: (parameter1= parameter ) ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )*
				{
				DebugLocation(137, 7);
				// CSharpCode.g:137:7: (parameter1= parameter )
				DebugEnterAlt(1);
				// CSharpCode.g:137:8: parameter1= parameter
				{
				DebugLocation(137, 19);
				PushFollow(Follow._parameter_in_parameters749);
				parameter1=parameter();
				PopFollow();


				}

				DebugLocation(138, 5);

				    	if (parameter1 != null)
				    	{
				    	    result.Add(parameter1);
				    	}
				    
				DebugLocation(144, 6);
				// CSharpCode.g:144:6: ( ( SPACE )? ( ',' ( SPACE )? parameter2= parameter ) )*
				try { DebugEnterSubRule(7);
				while (true)
				{
					int alt7=2;
					try { DebugEnterDecision(7, decisionCanBacktrack[7]);
					int LA7_1 = input.LA(1);

					if ((LA7_1==SPACE))
					{
						int LA7_2 = input.LA(2);

						if ((LA7_2==14))
						{
							alt7 = 1;
						}


					}
					else if ((LA7_1==14))
					{
						alt7 = 1;
					}


					} finally { DebugExitDecision(7); }
					switch ( alt7 )
					{
					case 1:
						DebugEnterAlt(1);
						// CSharpCode.g:144:7: ( SPACE )? ( ',' ( SPACE )? parameter2= parameter )
						{
						DebugLocation(144, 7);
						// CSharpCode.g:144:7: ( SPACE )?
						int alt5=2;
						try { DebugEnterSubRule(5);
						try { DebugEnterDecision(5, decisionCanBacktrack[5]);
						int LA5_1 = input.LA(1);

						if ((LA5_1==SPACE))
						{
							alt5 = 1;
						}
						} finally { DebugExitDecision(5); }
						switch (alt5)
						{
						case 1:
							DebugEnterAlt(1);
							// CSharpCode.g:144:7: SPACE
							{
							DebugLocation(144, 7);
							Match(input,SPACE,Follow._SPACE_in_parameters764); 

							}
							break;

						}
						} finally { DebugExitSubRule(5); }

						DebugLocation(144, 14);
						// CSharpCode.g:144:14: ( ',' ( SPACE )? parameter2= parameter )
						DebugEnterAlt(1);
						// CSharpCode.g:144:15: ',' ( SPACE )? parameter2= parameter
						{
						DebugLocation(144, 15);
						Match(input,14,Follow._14_in_parameters768); 
						DebugLocation(144, 19);
						// CSharpCode.g:144:19: ( SPACE )?
						int alt6=2;
						try { DebugEnterSubRule(6);
						try { DebugEnterDecision(6, decisionCanBacktrack[6]);
						int LA6_1 = input.LA(1);

						if ((LA6_1==SPACE))
						{
							alt6 = 1;
						}
						} finally { DebugExitDecision(6); }
						switch (alt6)
						{
						case 1:
							DebugEnterAlt(1);
							// CSharpCode.g:144:19: SPACE
							{
							DebugLocation(144, 19);
							Match(input,SPACE,Follow._SPACE_in_parameters770); 

							}
							break;

						}
						} finally { DebugExitSubRule(6); }

						DebugLocation(144, 37);
						PushFollow(Follow._parameter_in_parameters777);
						parameter2=parameter();
						PopFollow();


						}

						DebugLocation(145, 6);

						    	if (parameter2 != null)
						    	{
						    	    result.Add(parameter2);
						    	}
						    

						}
						break;

					default:
						goto loop7;
					}
				}

				loop7:
					;

				} finally { DebugExitSubRule(7); }


				}
				break;

			}
			} finally { DebugExitSubRule(8); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("parameters", 7);
			LeaveRule("parameters", 7);
			LeaveRule_parameters();
	    }
	 	DebugLocation(153, 4);
		} finally { DebugExitRule(GrammarFileName, "parameters"); }
		return result;

	}
	// $ANTLR end "parameters"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_function_value() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_function_value() {}
	// $ANTLR start "function_value"
	// CSharpCode.g:155:1: function_value : '{' ( options {greedy=false; } : . )* '}' ;
	[GrammarRule("function_value")]
	private void function_value()
	{
		EnterRule_function_value();
		EnterRule("function_value", 8);
		TraceIn("function_value", 8);
		try { DebugEnterRule(GrammarFileName, "function_value");
		DebugLocation(155, 4);
		try
		{
			// CSharpCode.g:156:5: ( '{' ( options {greedy=false; } : . )* '}' )
			DebugEnterAlt(1);
			// CSharpCode.g:157:5: '{' ( options {greedy=false; } : . )* '}'
			{
			DebugLocation(157, 5);
			Match(input,24,Follow._24_in_function_value826); 
			DebugLocation(157, 9);
			// CSharpCode.g:157:9: ( options {greedy=false; } : . )*
			try { DebugEnterSubRule(9);
			while (true)
			{
				int alt9=2;
				try { DebugEnterDecision(9, decisionCanBacktrack[9]);
				try
				{
					alt9 = dfa9.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(9); }
				switch ( alt9 )
				{
				case 1:
					DebugEnterAlt(1);
					// CSharpCode.g:157:37: .
					{
					DebugLocation(157, 37);
					MatchAny(input); 

					}
					break;

				default:
					goto loop9;
				}
			}

			loop9:
				;

			} finally { DebugExitSubRule(9); }

			DebugLocation(157, 42);
			Match(input,25,Follow._25_in_function_value844); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("function_value", 8);
			LeaveRule("function_value", 8);
			LeaveRule_function_value();
	    }
	 	DebugLocation(158, 4);
		} finally { DebugExitRule(GrammarFileName, "function_value"); }
		return;

	}
	// $ANTLR end "function_value"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_function() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_function() {}
	// $ANTLR start "function"
	// CSharpCode.g:160:1: function returns [Function result] : ( access_type )? (return_type= NAME ) SPACE (name= NAME ) '(' ( SPACE )? parameters ( SPACE )? ')' ( ';' | function_value ) ;
	[GrammarRule("function")]
	private Function function()
	{
		EnterRule_function();
		EnterRule("function", 9);
		TraceIn("function", 9);
	    Function result = default(Function);


	    IToken return_type = default(IToken);
	    IToken name = default(IToken);
	    List<Variable> parameters2 = default(List<Variable>);

